@@ -1,3 +1,6 @@
+20130315 - fhabermann
+* save user permissions in browser javascript var if permissions are changed
+
 20130307 - fhabermann
 * bootstrape upgrade to version 2.3.1
 * added better accordion icon handling over extra js script
